[package]
name = "my_rust_repo"
version = "0.1.0"
authors = ["wakai <wakai@vogaro.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
zip = "0.5"
log = "0.4"
env_logger = "0.9.0"
